# jamly

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/routes/: exercises.py  practice_sessions.py  users.py
app/services/: analyzer.py  exercise_generator.py  music_theory.py  note_detector.py
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/: api.ts
tests/: test_analyzer.py  test_api_flow.py  test_music_theory.py  test_note_detector.py
