[project]
name = "jamly-backend"
version = "0.1.0"
description = "Backend for the Jamly AI music practice assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "librosa>=0.10.2",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]
pitch = [
  "coremltools>=9.0",
  "mir-eval>=0.8.2",
  "pretty-midi>=0.2.11",
  "resampy>=0.4.2,<0.4.3",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
